# Garden-IoT

./: .gitignore  .gitmodules  README.md  blog.md
freertos/blink/: CMakeLists.txt
freertos/rp2040-freertos/: CMakeLists.txt  README.md
freertos/rp2040-freertos-tutorial/: CMakeLists.txt  README.md
freertos/rp2040-freertos-tutorial/src/: CMakeLists.txt  FreeRTOSConfig.h  blink_main.c  main.c  mutex_main.c  queue_main.c  scheduler_main.c  smp_main.c
freertos/rp2040-freertos/lib/: CMakeLists.txt  constants.h  gini_model.h
freertos/rp2040-freertos/lib/peripheral-libs/: dht22.c  dht22.h  lcd.c  lcd.h  light_sensor.c  light_sensor.h  rs485.c  rs485.h
freertos/rp2040-freertos/src/: CMakeLists.txt  dht22_main.c  lcd_main.c  light_sensor_main.c  main.c  rs485_main.c
pytorch/: Final_model.py  Model_comparison.py  model_comp_output.txt  output.txt
pytorch/models/model_ptes/: gini_model.pte
